# franky

./: .gitignore  LICENSE  database.sqlite3  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1ae398cab14a_описadd_favourite_model.py  307654af6417_add_field_telegram_file_id_to_broadcast_.py  5bd527fef863_add_field_show_role_name_to_user.py  c5de9b3bf220_add_field_telegram_file_id_alt_to_.py  d8cf7cd1f1a5_first_migration.py
data/locales/: ru.ftl
logs/: app.log.1  app.log.2  app.log.3  app.log.4  app.log.5
src/: main.py
src/bot/: setup.py
src/bot/handlers/: start.py
src/bot/keyboards/: user.py
src/bot/middlewares/: chataction.py  database.py  lang.py
src/bot/utils/: callback_data.py  send_message.py  states.py
src/core/: config.py  constants.py  exceptions.py  logger.py  paths.py
src/database/: connect.py
src/database/models/: __init__.py  base.py  broadcast.py  favourite.py  user.py
src/database/repo/: base.py  broadcast.py  favourite.py  requests.py  user.py
src/services/: audio.py  filemanager.py
src/utils/: enums.py  fluent.py  parser.py
