[tool.poetry]
name = "franky"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic-settings = "^2.7.0"
black = "^24.10.0"
aiosqlite = "^0.20.0"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"
progress = "^1.6"
tqdm = "^4.67.1"
argparse = "^1.4.0"
fluentogram = "^1.1.10"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
